--- a/website-frontend/css/style.css
+++ b/website-frontend/css/style.css
@@ -335,6 +335,16 @@ h3 {
   font-size: 1.5em;
 }
 
+.paragraph-references {
+  background-color: rgba(255, 255, 255, 0.166);
+  text-align: left;
+  padding: 20%;
+  line-height: 2.0;
+  font-size: medium;
+  font-weight: 400;
+  font-size: 1.5em;
+}
+
 .paragraph-describtion {
   background-color: rgba(255, 255, 255, 0.166);
   text-align: left;
