--- a/website-frontend/css/style.css
+++ b/website-frontend/css/style.css
@@ -286,10 +286,11 @@ body.fp-viewing-fifthSection-1 #menu li:last-child a {
 
 .graphs-climate {
   width: 100%;
-  height: 78vh;
+  height: 26vh;
   border: none;
 }
 
+/*
 .graph-climate {
   width: 100%;
   height: 100%;
@@ -306,7 +307,7 @@ body.fp-viewing-fifthSection-1 #menu li:last-child a {
   height: 36%;
   width: 65%
   }
-.graph-sun {
+ .graph-sun {
   overflow: visible;
   border: none;
   position: absolute;
@@ -326,6 +327,7 @@ body.fp-viewing-fifthSection-1 #menu li:last-child a {
   height: 36%;
   width: 65%
   }
+  */
 
 h2 {
   text-transform: none;
@@ -368,7 +370,7 @@ h3 {
   overflow-y: auto;
   scrollbar-width: auto;
   /* AG: setting the max height to force a scrollbar */
-  max-height: 60vh;
+  max-height: 63vh;
 }
 
 .paragraph-references {
