--- a/website-frontend/css/style.css
+++ b/website-frontend/css/style.css
@@ -290,45 +290,6 @@ body.fp-viewing-fifthSection-1 #menu li:last-child a {
   border: none;
 }
 
-/*
-.graph-climate {
-  width: 100%;
-  height: 100%;
-  border: none;
-}
-.graph-temp {
-  overflow: visible;
-  border: none;
-  position: absolute;
-  top: 3%;
-  left: 1%;
-  right: 5%;
-
-  height: 36%;
-  width: 65%
-  }
- .graph-sun {
-  overflow: visible;
-  border: none;
-  position: absolute;
-  top: 35%;
-  left: 1%;
-  right: 5%;
-  height: 36%;
-  width: 65%
-  }
-.graph-rain {
-  overflow: visible;
-  border: none;
-  position: absolute;
-  top: 67%;
-  left: 1%;
-  right: 5%;
-  height: 36%;
-  width: 65%
-  }
-  */
-
 h2 {
   text-transform: none;
   font-size: 4em;
@@ -367,9 +328,8 @@ h3 {
   font-weight: 400;
   font-size: 1.5em;
   overflow-y: auto;
-  scrollbar-width: auto;
   /* AG: setting the max height to force a scrollbar */
-  max-height: 63vh;
+  max-height: 60vh;
 }
 
 .paragraph-ref {
@@ -381,9 +341,8 @@ h3 {
   font-weight: 400;
   font-size: 1.5em;
   overflow-y: auto;
-  scrollbar-width: auto;
-  /* AG: setting the max height to force a scrollbar */
-  max-height: 63vh;
+  /* AG: setting the max height to force a scrollbar; was 63, set to 55 */
+  max-height: 60vh;
 }
 
 .paragraph-references {
