--- a/website-frontend/css/style.css
+++ b/website-frontend/css/style.css
@@ -317,15 +317,21 @@ h3 {
   background-attachment: fixed;
   background-position: center;
   background-size: cover;
+  -o-background-size: cover;
+  -moz-background-size: cover;
+  -webkit-background-size: cover;
 }
 
 /* Background for the conclusion page*/
 .background-conclusion {
-  background-image: url("../media/karsten-wurth-0aEgNBtqL-I-unsplash.jpg") !important;
+  background-image: url("../media/karsten-wurth-0aEgNBtqL-I-unsplash.png") !important;
   background-repeat: no-repeat;
-  background-attachment: fixed;
+/*  background-attachment: fixed;     AG: Chrome does not seem to like this setting */
   background-position: center;
   background-size: cover;
+  -o-background-size: cover;
+  -moz-background-size: cover;
+  -webkit-background-size: cover;
 }
 
 /* AG: We have a copy of paragraph-main, we are just using it for overflow text 
